# fast_moe

./: .gitignore  README.md  __init__.py  dev_settings.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
kernels/: __init__.py  moe.py  moe_fp8.py  utils.py
kernels/benchmarks/: configs.py  fused_index_select_swiglu_jagged_bmm_bench.py  index_select_jagged_bmm_bench.py  index_select_jagged_bmm_bench1.py  index_select_jagged_bmm_swiglu_bench.py  index_select_jagged_gating_bmm_bench.py  mul_merge_k_add_bench.py  silu_jagged_bmm_combine_bench.py  silu_jagged_bmm_fp8_analyze.py  silu_jagged_bmm_fp8_bench.py  timer.py  utils.py
kernels/pytorch/: moe.py  moe_fp8.py  mrn.py  quant_fp8.py
kernels/tests/: general_ops_test.py  grouped_gemm_test.py  moe_fp8_test.py  moe_test.py  mrn_test.py  quant_fp8_test.py
kernels/triton/: grouped_gemm.py  triton_gemm_fp8.py  triton_general_ops.py  triton_moe.py  triton_moe_fp8.py  triton_quant_fp8.py  utils.py
modules/: __init__.py  fast_moe_module.py  moe_base.py
modules/tests/: test_kernel_parity.py  test_moe_parity.py
utils/: __init__.py  configs.py  enums.py  types.py  utils.py
